assets/css/main.css
html {
    font-size: 61.5%;
    overflow-x: hidden;
}

body {
    font-size: 1.6rem;
    font-family: 'Helvetica Neue', 'Arial', sans-serif;
    color: #111;
    margin: 0 auto;
    padding: 0 16px;
    line-height: 1.6;
}

header#navbar {
    position: sticky;
    top: 0;
    padding-top: 20px;
    background-color: #fff;
    z-index: 998;
}

div#navbar-content {
    display: grid;
    grid-column-gap: 5px;
    grid-row-gap: 5px;
    grid-template-columns: 0.3fr 1fr min-content 70px;
    max-width: 640px;
    margin: auto;
    z-index: 999;
}

div#navbar-content nav ul {
    display: flex;
    justify-content: space-around;
    list-style: none;
    font-size: 1.05em;
    text-transform: capitalize;
    margin: 0;
    padding: 0;
}

div#navbar-content nav ul li a {
    color: #111;
    text-decoration: none;
}

div#navbar-content nav ul li a:hover {
    text-decoration: underline;
}

div#navbar-content div#links {
    display: flex;
}


div#navbar-content div#links a {
    padding: 0 0 0 5px;
}

/* main post styles */
main#content {
    position: relative;
    max-width: 640px;
    margin: auto;
    padding-bottom: 20px;
}

main#content a {
    color: #111;
}

main#content h1,
main#content h2,
main#content h3,
main#content h4,
main#content h5,
main#content h6 {
    margin: 16px 0;
    line-height: 1.15;
}

main#content h3 {
    font-size: 1.9rem;
}

main#content h1 + p,
main#content h2 + p,
main#content h3 + p,
main#content h4 + p,
main#content h5 + p,
main#content h6 + p {
    margin-top: 16px;
}

main#content p {
    color: #394548;
    margin: 16px 0;
}

main#content hr {
    height: 1px;
    border: 0;
    color-background: #d8d8d8;
}

/* list styles */
main#content .post-list {
    display: grid;
    grid-column-gap: 5px;
    grid-row-gap: 5px;
}

main#content .post-list a {
    text-decoration: none;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

main#content .post-list a:hover {
    text-decoration: underline;
}

main#content .post-list time {
    white-space: pre
}

main#content div#writing {
    grid-template-columns: 1fr min-content 70px;
}

main#content div#reading {
    grid-template-columns: 1fr 0.75fr min-content 70px;
}

main#content .rec {
    padding-left: 5px;
}

/* single post header style */
main#content header#post-header h1 {
    margin-bottom: 2px;
    font-size: 2.9rem;
    line-height: 1.15;
}

main#content header#post-header time {
    font-size: 0.95em;
    color: #767676;
}

main#content header#post-header a#post-rating {
    text-decoration: none;
}

main#content header#post-header a#post-rating:hover {
    text-decoration: underline;
}

/* image and figure stuff */
main#content img {
    max-width: 100%;
    height: auto;
}

main#content figure {
    margin: 16px 0;
}

main#content figure img {
    display: block;
    max-width: 100%;
    margin: 0 auto;
}

main#content figure figcaption {
    font-size: 0.92em;
    font-style: italic;
    line-height: 22px;
    text-align: center;
    margin-top: 6px;
    padding: 0 10px;
}

main#content figure figcaption h4 {
    font-style: normal;
    display: inline;
    margin: 0;
}

main#content figure figcaption p {
    display: inline;
    margin: 0;
    padding-left: 8px;
}

/* code related stuff */
main#content code,
main#content pre {
    font-family: 'monaco', monospace;
}

main#content code {
    font-size: 0.96em;
    padding: 0 5px;
}

main#content pre {
    display: block;
    overflow-x: auto;
    font-size: 1.5rem;
    white-space: pre;
    margin: 20px 0;
    padding: 20px 30px;
    line-height: 1.5;
}

main#content pre code {
    padding: 0;
}

/* adjustment when very small */
@media screen and (max-width: 640px) {

    header#navbar {
        position: static;
    }

    header#navbar div#navbar-content {
	display: block;
    }

    header#navbar nav ul {
	display: block;
	margin: 0.25em 0 0.75em 0;
        text-decoration: underline;
    }

    header#navbar div#links {
        display: block;
    }

    header#navbar div#links a {
	padding: 0;
    }

    main#content .post-list a {
        white-space: normal;
        text-decoration: underline;
    }

    main#content div#writing {
        grid-row-gap: 0;
        grid-template-columns: 1fr;
    }

    main#content div#reading {
        grid-row-gap: 0;
        grid-template-columns: 1fr;
    }

    main#content .rec {
        padding-left: 0;
	padding-bottom: 20px;
        text-decoration: none!important;
    }
}

